Support for apache derby database added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-#database
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.password=postgres
-spring.datasource.username=postgres
-spring.datasource.schema=post
-spring.datasource.url=jdbc:postgresql://localhost/forum
+#spring.profiles.active=postgresql
+spring.profiles.active=derby
 
-
+#jpa/hibernate
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=post
+
+spring.jpa.properties.hibernate.default_schema=forum
