--- a/src/main/resources/application-derby.properties
+++ b/src/main/resources/application-derby.properties
@@ -5,4 +5,4 @@ spring.datasource.password=Bond
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 
 #hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
