--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.active=derby
 
 #jpa/hibernate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.default_schema=forum
