Exercises completed during training

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,6 +1,6 @@
 input {
     file {
-            path =>  [ "/var/log/forum/forum.json" ]
+            path =>  [ "/home/lukasz/forum.json" ]
             codec => json {}
             add_field => {
                 "source" => "logging-training"
